# ChangeLog for dev-ruby/hoe
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.165 2014/10/29 18:48:28 mrueg Exp $

  29 Oct 2014; Manuel Rüger <mrueg@gentoo.org> -files/hoe-2.10.0-test-fix.patch,
  -files/hoe-2.5.0-tests.patch,
  -files/hoe-2.6.0-rubyforge-without-account.patch,
  -files/hoe-2.6.1-test-file-ordering.patch,
  -files/hoe-2.8.0-test-file-ordering.patch, -hoe-3.11.0.ebuild,
  -hoe-3.12.0.ebuild, hoe-2.13.0-r1.ebuild, hoe-3.13.0.ebuild:
  Cleanup old. Drop jruby target.

*hoe-3.13.0 (04 Oct 2014)

  04 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +hoe-3.13.0.ebuild:
  Version bump.

  19 Sep 2014; Manuel Rüger <mrueg@gentoo.org> -hoe-2.12.5.ebuild:
  Cleanup old.

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> hoe-2.13.0-r1.ebuild:
  Stable for ppc64, wrt bug #503564

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> hoe-2.13.0-r1.ebuild:
  Stable for ppc, wrt bug #503564

  15 Aug 2014; Raúl Porcel <armin76@gentoo.org> hoe-2.13.0-r1.ebuild:
  sparc stable, bug #490180

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> hoe-2.12.5.ebuild,
  hoe-2.13.0-r1.ebuild, hoe-3.11.0.ebuild, hoe-3.12.0.ebuild:
  Remove trailing '.' from DESCRIPTION.

  17 Jun 2014; Tobias Klausmann <klausman@gentoo.org> hoe-2.13.0-r1.ebuild:
  Stable on alpha, bug #490180

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> hoe-2.13.0-r1.ebuild:
  x86 stable wrt bug #490180

  15 May 2014; Manuel Rüger <mrueg@gentoo.org> -hoe-3.9.0-r1.ebuild:
  Cleanup old.

*hoe-3.12.0 (25 Apr 2014)

  25 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +hoe-3.12.0.ebuild,
  -hoe-3.9.0.ebuild:
  Version bump.

*hoe-3.11.0 (21 Apr 2014)

  21 Apr 2014; Hans de Graaff <graaff@gentoo.org> +hoe-3.11.0.ebuild:
  Version bump. Remove Gem.bin_wrapper use that is broken on Gentoo.

*hoe-3.9.0-r1 (18 Apr 2014)

  18 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +hoe-3.9.0-r1.ebuild,
  hoe-3.9.0.ebuild: