@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/hoe-3.13.0.ebuild,v 1.3 2014/12/14 16:58:23 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/hoe-3.13.0-r1.ebuild,v 1.1 2014/12/14 16:58:23 mrueg Exp $
 
 EAPI=5
-USE_RUBY="ruby19 ruby20"
+USE_RUBY="ruby19 ruby20 ruby21"
 
 RUBY_FAKEGEM_TASK_DOC=""
 
