@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby19? ( test? ( >=dev-ruby/minitest-5.3:5[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/minitest-5.3:5[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/minitest-5.3:5[ruby_targets_ruby21] ) ) test? ( ruby_targets_ruby19? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby19] >=dev-ruby/rdoc-4.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby20] >=dev-ruby/rdoc-4.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby21] >=dev-ruby/rdoc-4.0[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DEPEND=ruby_targets_ruby19? ( test? ( >=dev-ruby/minitest-5.3:5[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/minitest-5.3:5[ruby_targets_ruby20] ) ) test? ( ruby_targets_ruby19? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby19] >=dev-ruby/rdoc-4.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby20] >=dev-ruby/rdoc-4.0[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) )
 DESCRIPTION=Hoe extends rake to provide full project automation
 EAPI=5
 HOMEPAGE=http://seattlerb.rubyforge.org/
-IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 doc test test
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 doc test test
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=MIT
-RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby19] >=dev-ruby/rdoc-4.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby20] >=dev-ruby/rdoc-4.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby21] >=dev-ruby/rdoc-4.0[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby19] >=dev-ruby/rdoc-4.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/rake-0.8.7[ruby_targets_ruby20] >=dev-ruby/rdoc-4.0[ruby_targets_ruby20] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 )
 SLOT=0
 SRC_URI=mirror://rubygems/hoe-3.13.0.gem
 _eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	22fc880fe95a3d6f9639d3b57f3ffb84	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=a8a8c2eee89fdc77ed41087ad9154aae
+_md5_=eedbc1f1b914b52cf7a99ea547d35aba
