@@ -10,4 +10,4 @@ RDEPEND=sys-libs/ncurses readline? ( >=sys-libs/readline-5.0 ) X? ( x11-libs/lib
 SLOT=0
 SRC_URI=mirror://sourceforge/ngspice/ngspice-26.tar.gz mirror://sourceforge/ngspice/ngspice-26-manual.pdf
 _eclasses_=autotools	c118b9a8e93bfef124f2d7a2fe56a95e	eutils	6faef4c127028ccbba3a11400d24ae34	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=954b3e95dcadb1aeea565f273619c67b
+_md5_=50701a77e2f7502bc5d29a22400d2719
