@@ -8,15 +8,15 @@ DIST ngspice-25.tar.gz 6729137 SHA256 d000bbb978db846ff6df7ce327d8194abe046fdd5c
 DIST ngspice-26-manual.pdf 2141771 SHA256 30b4fde001d012b0350aae3ba64892fb2f315d04f6761b95abd79f4b7c4cd85d SHA512 1c160aeef61d8091a6d788677bcf7ea682393cc886d5d535f87bb800cdae4f095cbf1e833babadea481956b904b4bdb688cc18b80d9d6a29cab33a54275abab1 WHIRLPOOL 7e9be918599599da3bd6fc754afdc453e1cc6171cabe2afe05da2be24433b4c1ee46728c29995dc62d04d08f966a441a853aa231b37b55e7bcfd587832dcb5b1
 DIST ngspice-26.tar.gz 6925987 SHA256 51e230c8b720802d93747bc580c0a29d1fb530f3dd06f213b6a700ca9a4d0108 SHA512 eb6a81df90de803c9f7544e8d0de7cc413aac169f69d1dec5cc6d2e667b66d42aede7f14c75bcdd10288be0c2ac07863fd4028b9fe59f2f515d680c2ffa41cab WHIRLPOOL cb356ee817fa00ab4a195c8380445adddf6426b5b08ca7c9af1bd96e6f43f3643bc6e4d2d9a7e4a3f3a79f43aa40b0da08721c2e42365c79b5f2e6bad6aef669
 DIST ngspice24-manual.pdf.gz 1820609 SHA256 dfb87979f285297f1e4c7fdbfc6380cc906f408019cdb39653d8e4411bb94ac4 SHA512 744fe5948a777613d0e4b32bf9f0c01cecfd5235080479e13e97c8b291d43338c1c8e2848ed5d339e0f6d8c2ba014564f40e64c76e48596251c29c25260b7572 WHIRLPOOL 380f02eb4099c4796b6326ab5419ca5d499641c1434b0684abb975a0a931ea306b938f58bc807751b69d1bf30b4c97968a6ce91bdccc3a02347774524429323e
-EBUILD ngspice-24.ebuild 2555 SHA256 caf01c1a3aba09b70b77be872f3e896e86f99029e518d7dfa04da96ca0ebc59e SHA512 f0c925fa103c50400f1dab2699eef68b8d3025cf070dbef955f3dca76b03b824b594894959e53205bd12ec33da44df183cf1135510fdb1873b449210dd666d77 WHIRLPOOL 93c1e30fc909a43726cd8311ff565e5da587c2c296397623a262a6f47e0273e978df50d9c25de323c936fafccbcae63afec29bf3d790a5157b691814f5208306
-EBUILD ngspice-25.ebuild 2557 SHA256 f7a0e78c153cfcf2e69be5432f7604064fdae8b7b0cf045b1327630e271df8b3 SHA512 f5a92b9f3bec4d75e255083b1e8b456c9cfc423bc24217c3c214e0f556086a2aa4b7111659822afccf812df330982c089de98d306228dd468420d5a939e362c7 WHIRLPOOL 6bdac1c64a949de70b9a7a2b65ac2179bb7c49bca65713054931c1fedadf22b5352fbf3395be2e5f6f3b60d531e28612b6b8fbfb30fb80775896568b1dd7c066
-EBUILD ngspice-26.ebuild 2564 SHA256 5b606ab44ce7988b49ed29243ce0a95f89042e4f2457ff5146c2fb413987ed53 SHA512 c70f5f6566e7700a36af75216af764a6afb4037097d1ce542037991234bb52eb26622e5f40fccc91414be891cbcf66b99cb8a95b9a347df5c1af2dc4cc333e97 WHIRLPOOL dd8b5027606a7518420ae89dc73140f25859712ee30b5d1d0099b454d0a3e53307104531265175e7a86cc3bb30e4d78102945e0ff5c45242c6d6af62aff8aa16
-MISC ChangeLog 6002 SHA256 509544d35ae471c1a70c934d70bded6c2cc67e643b962a015dbd6f06a8c4b0ee SHA512 6ec894b5a0b74ee9f60eaca56366533997ea33fa8942d2c5c52debeaaf986148bad2f92841b567284faca2bfe74bab8e370798be87304f4f61cd2e6748d0f4a5 WHIRLPOOL 4e977a93fb9ba5912ca598ad19b0a8390c23c05e6b3e64fc4af7e7ec3fe4d36dee012a5d5990760457a7359dea32fe6a27671ff2dbb8fb4ec58c5c33610cdc96
+EBUILD ngspice-24.ebuild 2679 SHA256 0bbaa3ca6d4be9115022e437349e3bae3a1d8caf4bec299379801be984d503ce SHA512 75a1f9cfc08742b546c2044a65b21e446e64a4f3c64c6f0ba7c94d74e7624ea555ae535423590ce2d285ccf67919102ff7bddd5d9d1e6f9d69fca1c47d82cdc4 WHIRLPOOL 27f53e5e9518d2bfb0111ef9eeed048bd45934ec09791ffa1da2e08866251b7563eb6200d68b53675c5c4fe773ac09c1dd4fce291df3a2f630e6add4753aad4f
+EBUILD ngspice-25.ebuild 2681 SHA256 cfa97ba54a2e2d3a4898c0bab6f9e2685ecc1c0deb140d5e44d93b442007828f SHA512 124f2befc860fdb17f968694397e64244b956d166ff5a8d197e7cab67b7c8e39033306281df691ace9d9a000faa3f1d1a7e736d5ed57382504449d25e7d95fe5 WHIRLPOOL 4f05eebec48aded5179240d3fa2ddc8da3b4314f3c612310fb541eed039461ddec5e03b6f9f74dcce6309cc44a91ac2d10f8ffe033b8002e2f215c6fbb115209
+EBUILD ngspice-26.ebuild 2688 SHA256 59bf8cbfdf14509dd52e05fdf9c6d02746dcf73d1c7d1e6ce5a5e72efd76d753 SHA512 86a4f3dc93f4eebb131fbe0df78134e67878022034b3bbf62f40657d531950eaba6bda286deb1d08cb4eb1047ccb8b54c7266def48af4a5ac7ea3cb6e88a62af WHIRLPOOL 47d099ddf517531b7cd00289f5fd1dda07be43f3c1c00faf094e830d22458687371ac0bbe37aeb4c93220deafc0479d07f548470fc253b66b99bfd96f3f9418f
+MISC ChangeLog 6163 SHA256 2af32d09d69e393ad8436e1faf191e42024fe64c318c0837d959392303caee62 SHA512 2e224da09873a6c79c519bfc0ed24841b8dee0e5f531e0cdeed1291eda63201a979704fdb9cb9c94f739b11660ad347ea7baa1dbe3addb7613c9e71b126437e1 WHIRLPOOL cbe4d835173721401730f746fd338af740ee087d0f243d7a80f742bc740b26fad0f49658f94d277661f93a0b2c861bfbe51d4a68f41d37abbf28aff2d39c96db
 MISC metadata.xml 359 SHA256 08c94251c175bc7c4f708eb5582f8c02e8c62f41971b148287f6f95859ee3666 SHA512 282e8b320c2b618026591a6360cc35e759fa94a55b53e54ca4ad19b38ebe944aa9835ff30a0d8990d8cc94f3b38373709288821b4cacbdaa038b407d6c052568 WHIRLPOOL aaab64a4ce66565d9a0c96b79a0c2ef1b21f5a401ef5a27e0d1d035a15b34294b2b6ce3b6f4430871d77301f7d2aa10cefec5f2a8c979289c1d9c6e8ac157a32
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn1ekACgkQcaHudmEf86oBtgCdFrnra6hZb/wE8dd+qcxEIG/q
-roYAn25ERoyK0SGkz2cKBRcC8kUYZj2L
-=Byld
+iEYEAREIAAYFAlSNwHUACgkQQe4uqXYgU9XiPQCg3SgncnSBOhLzh6PqwAVw0fjd
+upAAoJcVUzzKZo8dRa2rUpt4+JPRLvzK
+=fw04
 -----END PGP SIGNATURE-----
