@@ -1,6 +1,10 @@
 # ChangeLog for sci-electronics/ngspice
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/ngspice/ChangeLog,v 1.9 2014/08/10 20:28:24 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/ngspice/ChangeLog,v 1.10 2014/12/14 16:53:03 tomjbe Exp $
+
+  14 Dec 2014; Thomas Beierlein <tomjbe@gentoo.org> ngspice-24.ebuild,
+  ngspice-25.ebuild, ngspice-26.ebuild:
+  Builds also with ncurses[tinfo] (bug #458128)
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> ngspice-24.ebuild,
   ngspice-25.ebuild, ngspice-26.ebuild:
