@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/hoe
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.165 2014/10/29 18:48:28 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.166 2014/12/14 16:58:23 mrueg Exp $
+
+*hoe-3.13.0-r1 (14 Dec 2014)
+
+  14 Dec 2014; Manuel Rüger <mrueg@gentoo.org> +hoe-3.13.0-r1.ebuild,
+  hoe-3.13.0.ebuild:
+  Create a stable candidate of hoe-3.
 
   29 Oct 2014; Manuel Rüger <mrueg@gentoo.org> -files/hoe-2.10.0-test-fix.patch,
   -files/hoe-2.5.0-tests.patch,
